--- a/wp-content/plugins/sistema-reservas/assets/css/frontend-sthle.css
+++ b/wp-content/plugins/sistema-reservas/assets/css/frontend-sthle.css
@@ -27,6 +27,10 @@
     color: #333;
 }
 
+.form-group input, .form-group textarea{
+    width: 95% !important;
+}
+
 /* === PASO 1: CALENDARIO === */
 .calendar-container {
     padding: 20px;
