--- a/wp-content/themes/tictac/assets/style/custom.sass
+++ b/wp-content/themes/tictac/assets/style/custom.sass
@@ -115,8 +115,8 @@ body
 		font-family: 'Duran-Regular' !important
 		font-weight: 400 !important
 		font-size: 16px !important
-		line-height: 19.5px !important
-		letter-spacing: 5% !important
+		line-height: 26px !important
+		letter-spacing: 2px !important
 		color: #2E2D2C !important
 
 		&:last-child
