--- a/wp-content/plugins/sistema-reservas/assets/css/admin-style.css
+++ b/wp-content/plugins/sistema-reservas/assets/css/admin-style.css
@@ -1483,6 +1483,15 @@ body {
     background: #138496;
 }
 
+.btn-warning {
+    background: #ffc107;
+    color: #212529;
+}
+
+.btn-warning:hover {
+    background: #e0a800;
+}
+
 .btn-edit {
     background: #0073aa;
     color: white;
