--- a/wp-content/plugins/sistema-reservas/assets/css/frontend-sthle.css
+++ b/wp-content/plugins/sistema-reservas/assets/css/frontend-sthle.css
@@ -327,7 +327,11 @@
     }
     
     .persons-grid {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .custom-audio-wrapper{
+        padding: 20px;
     }
     
     .price-row {
@@ -342,7 +346,6 @@
     }
     
     .calendar-legend {
-        flex-direction: column;
         align-items: center;
     }
     
