--- a/wp-content/themes/tictac/assets/functions/blocks/textosemaforoslider/textosemaforoslider.scss
+++ b/wp-content/themes/tictac/assets/functions/blocks/textosemaforoslider/textosemaforoslider.scss
@@ -186,7 +186,7 @@
             }
 
             .slide-titulo {
-                font-size: 1.5rem;
+                font-size: 25px;
                 margin-bottom: 20px;
             }
 
