--- a/wp-content/themes/tictac/assets/style/font.scss
+++ b/wp-content/themes/tictac/assets/style/font.scss
@@ -23,7 +23,7 @@ body {
   .h1 {
     font-family: 'manhaj' !important;
     font-weight: 400;
-    font-size: 80px;
+    font-size: 95px;
     line-height: 62px;
     letter-spacing: 0%;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -40,7 +40,7 @@ body {
     font-weight: 400;
     font-size: 35px;
     line-height: 62px;
-    letter-spacing: 0%;
+    letter-spacing: 2px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     color: white;
     text-align: center;
