--- a/wp-content/themes/tictac/assets/style/header.scss
+++ b/wp-content/themes/tictac/assets/style/header.scss
@@ -41,6 +41,7 @@ $xl: 1100px;
         margin: 0 auto;
         display: flex;
         align-items: center;
+        padding: 10px;
     }
     .divheader nav ul{
         list-style: none;
